# routers/authentication.js
@@ -1,22 +1,17 @@
-require("../config/passport");
-const passport = require('passport');
+const passport = require("../config/passport");
 const routes = require('express').Router();
-const session = require('express-session');
 
-const isLoggedIn = (req, res, next) => {
+function isLoggedIn (req, res, next) {
     if (req.user) {
         next();
     } else {
-        res.sendStatus(401);
+        res.status(401).json('user-not-login');
     }
-}
+    return true;
+};
 
 routes.use(passport.initialize());
 routes.use(passport.session());
-
-routes.get("/", (req, res) => {
-    res.json({message: "You are not logged in"})
-})
 
 routes.get('/google',
     passport.authenticate('google', {
@@ -25,30 +20,20 @@ routes.get('/google',
         }
     ));
 
-routes.get('/google/callback',
-    passport.authenticate('google', {
-        failureRedirect: '/failed',
-    }),
-    function (req, res) {
-        res.redirect('/auth/success')
-
-    }
-);
-
-routes.get("/logout", (req, res,next) => {
-    req.session = null;
+routes.post('/logout', function(req, res,next){
     req.logout(function(err) {
         if (err) { return next(err); }
         res.redirect('/');
     });
-})
-
-routes.get("/failed", (req, res) => {
-    res.send("Failed")
-})
-
-routes.get("/success",isLoggedIn, (req, res) => {
-    res.send(`Welcome ${req.user.email}`)
 });
 
-module.exports = routes;
+routes.get('/google/callback',
+    passport.authenticate('google', {
+        successRedirect: '/auth/success',
+        failureRedirect: '/auth/failed',
+    }));
+
+module.exports = {
+    routes:routes,
+    isLoggedIn:isLoggedIn
+};
